--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "scv2_api"
+name = "sc2py"
 version = "0.1.0"
 description = "SAP Sales/Service Cloud V2 API Wrapper"
 authors = [{name = "Diego Vaccher", email = "dvaccher99@gmail.com"}]
