--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "sc2py"
+name = "scv2py"
 version = "0.1.0"
 description = "SAP Sales/Service Cloud V2 API Wrapper"
 authors = [{name = "Diego Vaccher", email = "dvaccher99@gmail.com"}]
@@ -14,8 +14,8 @@ dependencies = [
 ]
 
 [project.urls]
-"Homepage" = "https://github.com/denny0754/scv2_api"
-"Bug Tracker" = "https://github.com/denny0754/scv2_api/issues"
+"Homepage" = "https://github.com/denny0754/sc-v2-api"
+"Bug Tracker" = "https://github.com/denny0754/sc-v2-api/issues"
 
 [tool.pytest]
 testpaths = ["tests"]
